--- a/webpack/src/css/main.css
+++ b/webpack/src/css/main.css
@@ -2,3 +2,8 @@ h1{
     font-size: 50px;
     color: aquamarine;
 }
+#div1{
+    width: 300px;
+    height: 300px;
+    background-image: url("../image/01.jpg");
+}
